<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/motionLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">
    <TextView
        android:id="@+id/detail_fileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lol"
        android:textSize="@dimen/text_22" />
    <TextView
        android:id="@+id/detail_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lol"
        android:textSize="@dimen/text_22" />
    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Dim_default"
        android:layout_marginEnd="@dimen/Dim_default"
        android:layout_marginBottom="@dimen/Dim_default"
        android:background="@color/colorPrimary"
        android:text="@string/ok_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/detail_nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filename"
        android:textSize="@dimen/text_22" />
    <TextView
        android:id="@+id/detail_statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filestatus"
        android:textSize="@dimen/text_22" />
</androidx.constraintlayout.motion.widget.MotionLayout>