<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/glide_Radio_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/Glide_button"
            android:textSize="@dimen/text_22" />

        <RadioButton
            android:id="@+id/loadApp_Radio_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoadApp_button"
            android:textSize="@dimen/text_22" />

        <RadioButton
            android:id="@+id/retrofit_Radio_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Retrofit_button"
            android:textSize="@dimen/text_22" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/download_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/images"
        tools:ignore="ImageContrastCheck" />

    <com.udacity.LoadingButton
        android:id="@+id/loadingButton"
        android:layout_height="60dp"
        android:layout_width="0dp"
        android:layout_margin="30dp"
        app:backgroundColor="@color/colorPrimary"
        app:textColor="@color/white"
        app:textSize="@dimen/text_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>